Fixed IO image alignement

--- a/app/assets/stylesheets/custom/scaffolds.scss
+++ b/app/assets/stylesheets/custom/scaffolds.scss
@@ -720,6 +720,8 @@ ul.vesting_schedule {
 
 .ci-logo {
   max-height: 150px !important;
+  margin: auto;
+  margin-bottom: 10px;
 }
 
 .title-line {
